# dashboard.bacalhau.org

./: .gitignore  Gemfile  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
buildhealth/: __init__.py  db.sqlite3  manage.py
buildhealth/buildhealth/: asgi.py  settings.py  urls.py  wsgi.py
buildhealth/buildhealth/performance/: apps.py  views.py
buildhealth/raw_data/: download.py
buildhealth/staticfiles/: staticfiles.json
dashboards/: middleware.py  statsDBFile.json  views.py
dashboards/templates/: index.html
dashboardsproject/: settings.py  urls.py  wsgi.py
performance/: views.py
raw_data/: .bacalhau-global-storage-reader.json  .gsutil-boto  download.py
