[tool.poetry]
name = "dashboard.bacalhau.org"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.6.0"
google-cloud = "^0.34.0"
google-cloud-storage = "^2.4.0"
python-box = "^6.0.2"
python-dateutil = "^2.8.2"
Django = "^4.0.6"
gunicorn = "^20.1.0"
django-admin-interface = "^0.19.1"
dj-database-url = "^1.0.0"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
