[tool.poetry]
name = "dashboards.bacalhau.org"
version = "0.1.0"
description = ""
authors = ["David Aronchick <aronchick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
gunicorn = "^20.1.0"
dj-database-url = "^1.0.0"
whitenoise = "^6.2.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
